testing codeforces api

--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "body-parser": "^1.18.3",
     "cors": "^2.8.5",
     "create-react-app": "^3.3.0",
+    "crypto": "^1.0.1",
     "dotenv": "^7.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.21",
-    "morgan": "^1.9.1"
+    "morgan": "^1.9.1",
+    "sha.js": "^2.4.11"
   }
 }
