--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.4.21",
-    "morgan": "^1.9.1",
-    "sha.js": "^2.4.11"
+    "morgan": "^1.9.1"
   }
 }
