stalk user profile ui added

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "open-source-online-judge",
+  "name": "coderbano-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
