--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-toastify": "^5.5.0",
     "recharts": "^2.0.0-beta.1"
   },
   "scripts": {
