--update: ui changes

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ MONGO_URI = mongodb_path
 CODEFORCES_KEY = api_key
 CODEFORCES_SECRET = api_secret
 JWT_PRIVATE_KEY = jwt_secret_key
+HACKEREARTH_CLIENT_ID = #
+HACKEREARTH_CLIENT_SECRET = #
