--- a/client/package.json
+++ b/client/package.json
@@ -7,12 +7,14 @@
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "codemirror": "^5.53.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-codemirror2": "^7.1.0",
     "react-dom": "^16.12.0",
     "react-icons": "^3.8.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "3.4.0",
     "react-toastify": "^5.5.0",
     "recharts": "^2.0.0-beta.1"
   },
