--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
     "codemirror": "^5.53.2",
+    "date-fns": "^2.16.1",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-codemirror2": "^7.1.0",
